--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,8 +29,8 @@ test:
 
 about:
   home: http:/github.com/HomerReid/libGDSII
-  license: GPL2
-  license_file: COPYING
+  license: GPL-2.0-or-later
+  license_file: LICENSE
   summary: C++ library and command-line utility for reading GDSII geometry files
   doc_url: https://github.com/HomerReid/libGDSII/tree/master/README.md
   dev_url: https://github.com/HomerReid/libGDSII
