--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ test:
 about:
   home: http:/github.com/HomerReid/libGDSII
   license: GPL-2.0-or-later
-  license_file: LICENSE
+  license_file: COPYING
   summary: C++ library and command-line utility for reading GDSII geometry files
   doc_url: https://github.com/HomerReid/libGDSII/tree/master/README.md
   dev_url: https://github.com/HomerReid/libGDSII
